service.yaml
apiVersion: v1
kind: Service
metadata:
  name: buy
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: buy
  ports:
    - port: 8888
      protocol: TCP
