ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: buy
  namespace: default
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: buy
              port:
                number: 8888

    - host: buy.test.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: buy
              port:
                number: 8888
